// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserList /> Should render and match the snapshot - admin 1`] = `
.c6 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 14px;
  font-weight: 700;
  color: rgba(255,255,255,1);
  color: rgba(255,255,255,1);
}

.c31 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c35 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c40 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(255,255,255,1);
  color: rgba(255,255,255,1);
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: scroll;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding-right: 10%;
  padding-left: 10%;
  margin-top: 30px;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 30px;
}

.c5 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(35,183,160,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(255,118,145,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(0,0,128,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(128,128,0,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(16,121,105,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 25px;
}

.c32 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(35,183,160,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(255,118,145,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c37 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(194,178,0,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  min-width: 25px;
  min-height: 25px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 10px;
  padding-left: 10px;
  margin-right: 10px;
  margin-left: 10px;
  background-color: rgba(183,39,234,1);
  cursor: pointer;
  border-radius: 5px;
  border-radius: 5px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  justify-items: flex-start;
  padding-right: 20px;
  width: 100%;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  margin-bottom: 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  display: none;
}

.c18 {
  margin-right: 5px;
}

.c13:disabled + label > .c17 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16:hover {
  cursor: pointer;
}

.c13:disabled + .c15 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  margin-right: 10px;
  color: #2F3850;
}

.c41 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
  cursor: pointer;
}

.c20 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  padding-right: 30px;
  padding-left: 30px;
  color: #2F3850;
}

.c20:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c20:disabled {
  color: #ABBBD1;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  position: absolute;
  left: 10px;
  top: 10px;
}

.c4 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  font-weight: 700;
  color: rgba(183,39,234,1);
}

.c34 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  color: #2F3850;
  text-align: start;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 20px;
}

.c23 {
  font-size: 13px;
  width: 100%;
  margin-bottom: 20px;
  box-shadow: 0px 4px 20px #E3EEFB;
}

.c23 tr,
.c23 th,
.c23 td {
  font-weight: 400;
}

.c25 {
  height: 47.5px;
}

.c26 {
  cursor: default;
  color: #0E0E0E;
}

.TBody-gqq9cv-0 .c24:nth-child(even) {
  background: rgba(16,121,105,0.1);
}

.TBody-gqq9cv-0 .c24:nth-child(even) td:first-child,
.TBody-gqq9cv-0 .c26:nth-child(even) th:first-child {
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.TBody-gqq9cv-0 .c24:nth-child(even) td:last-child,
.TBody-gqq9cv-0 .c26:nth-child(even) th:last-child {
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}

.c26 td:nth-last-child(-n + ) {
  opacity: 100%;
}

.c26:hover {
  background: !important;
}

.c26:hover td:hover {
  opacity: 100%;
}

.c29 {
  cursor: pointer;
  color: #0E0E0E;
}

.TBody-gqq9cv-0 .c24:nth-child(even) {
  background: #FFFFFF;
}

.TBody-gqq9cv-0 .c24:nth-child(even) td:first-child,
.TBody-gqq9cv-0 .c29:nth-child(even) th:first-child {
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.TBody-gqq9cv-0 .c24:nth-child(even) td:last-child,
.TBody-gqq9cv-0 .c29:nth-child(even) th:last-child {
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}

.c29 td:nth-last-child(-n + 1) {
  opacity: 0;
}

.c29:hover {
  background: #E9F1FB !important;
}

.c29:hover td:hover {
  opacity: 100%;
}

.c30 {
  padding-left: 20px;
}

.c27 {
  width: auto;
  background-color: rgba(255,255,255,1);
  color: rgba(47,56,80,1);
  opacity: 0.6;
}

.c22 {
  position: relative;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    overflow="scroll"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
        display="flex"
      >
        <h1
          class="c3"
        >
          Manage accounts
        </h1>
        <button
          class="c4"
          color="#B727EA"
          font-weight="bold"
        >
          + Invite researcher
        </button>
      </div>
      <div>
        <div
          style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; margin-bottom: 40px; padding: 0px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c5"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c7"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c8"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Team Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c9"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Third Party
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c10"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      E-Intervention Admin
                    </p>
                  </div>
                </div>
                <div
                  class="c11"
                  width="25"
                />
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 33.333333333333336%; flex-basis: 33.333333333333336%; flex-grow: 0; flex-shrink: 0; max-width: 33.333333333333336%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c12"
                  >
                    <input
                      class="c13 c14"
                      id="show-inactive"
                      type="checkbox"
                    />
                    <label
                      class="c15 c16"
                      for="show-inactive"
                    >
                      <img
                        class="c17 c18"
                        src="IMAGE_MOCK"
                      />
                      Show inactive accounts
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
            >
              <div
                class="c19"
              >
                <input
                  aria-label="Filter users by name"
                  class="c20"
                  placeholder="Filter users by name"
                  type="text"
                  value=""
                />
                <img
                  alt="search"
                  class="c21"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
          </div>
          <span
            style="display: table; clear: both;"
          />
        </div>
        <div
          class="c22"
        >
          <table
            class="c23"
            width="100%"
          >
            <thead
              class="THead-sc-8drp5d-0"
            >
              <tr
                class="c24 c25 c26"
              >
                <th
                  class="c27"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="c28"
                  >
                    Name
                  </div>
                </th>
                <th
                  class="c27"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="c28"
                  >
                    Email
                  </div>
                </th>
                <th
                  class="c27"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="c28"
                  >
                    Role
                  </div>
                </th>
                <th
                  class="c27"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="c28"
                  >
                    Activate/Deactivate
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="TBody-gqq9cv-0"
            >
              <tr
                class="c24 c25 c29"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="c30"
                >
                  <p
                    class="c31"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="c30"
                >
                  test@test.pl
                </td>
                <td
                  class="c30"
                >
                  <div
                    class="c32"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </td>
                <td
                  class="c30"
                >
                  <div
                    class="c33"
                    width="100%"
                  >
                    <button
                      class="c34"
                    >
                      <p
                        class="c35"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="c24 c25 c29"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="c30"
                >
                  <p
                    class="c31"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="c30"
                >
                  test2@test.pl
                </td>
                <td
                  class="c30"
                >
                  <div
                    class="c36"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </td>
                <td
                  class="c30"
                >
                  <div
                    class="c33"
                    width="100%"
                  >
                    <button
                      class="c34"
                    >
                      <p
                        class="c35"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="c24 c25 c29"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="c30"
                >
                  <p
                    class="c31"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="c30"
                >
                  test3@test.pl
                </td>
                <td
                  class="c30"
                >
                  <div
                    class="c37"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Admin
                    </p>
                  </div>
                </td>
                <td
                  class="c30"
                >
                  <div
                    class="c33"
                    width="100%"
                  >
                    <button
                      class="c34"
                    >
                      <p
                        class="c35"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          aria-label="Data list pagination"
          class="c38"
          display="flex"
          role="navigation"
          width="100%"
        >
          <div
            aria-label="Go to page: 1"
            aria-selected="true"
            class="c39"
            cursor="pointer"
            display="flex"
          >
            <p
              class="c40"
              color="#FFFFFF"
            >
              1
            </p>
          </div>
          <h1
            aria-label="Go to next page"
            class="c41"
            cursor="pointer"
          >
            &gt;
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserList /> Should render and match the snapshot - researcher 1`] = `
.c5 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 14px;
  font-weight: 700;
  color: rgba(255,255,255,1);
  color: rgba(255,255,255,1);
}

.c30 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c34 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c39 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(255,255,255,1);
  color: rgba(255,255,255,1);
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: scroll;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding-right: 10%;
  padding-left: 10%;
  margin-top: 30px;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 30px;
}

.c4 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(35,183,160,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(255,118,145,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(0,0,128,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(128,128,0,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(16,121,105,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 25px;
}

.c31 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(35,183,160,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(255,118,145,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(194,178,0,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  min-width: 25px;
  min-height: 25px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 10px;
  padding-left: 10px;
  margin-right: 10px;
  margin-left: 10px;
  background-color: rgba(183,39,234,1);
  cursor: pointer;
  border-radius: 5px;
  border-radius: 5px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  justify-items: flex-start;
  padding-right: 20px;
  width: 100%;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  margin-bottom: 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  display: none;
}

.c17 {
  margin-right: 5px;
}

.c12:disabled + label > .c16 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15:hover {
  cursor: pointer;
}

.c12:disabled + .c14 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  margin-right: 10px;
  color: #2F3850;
}

.c40 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
  cursor: pointer;
}

.c19 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  padding-right: 30px;
  padding-left: 30px;
  color: #2F3850;
}

.c19:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c19:disabled {
  color: #ABBBD1;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  position: absolute;
  left: 10px;
  top: 10px;
}

.c33 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  color: #2F3850;
  text-align: start;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 20px;
}

.c22 {
  font-size: 13px;
  width: 100%;
  margin-bottom: 20px;
  box-shadow: 0px 4px 20px #E3EEFB;
}

.c22 tr,
.c22 th,
.c22 td {
  font-weight: 400;
}

.c24 {
  height: 47.5px;
}

.c25 {
  cursor: default;
  color: #0E0E0E;
}

.TBody-gqq9cv-0 .c23:nth-child(even) {
  background: rgba(16,121,105,0.1);
}

.TBody-gqq9cv-0 .c23:nth-child(even) td:first-child,
.TBody-gqq9cv-0 .c25:nth-child(even) th:first-child {
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.TBody-gqq9cv-0 .c23:nth-child(even) td:last-child,
.TBody-gqq9cv-0 .c25:nth-child(even) th:last-child {
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}

.c25 td:nth-last-child(-n + ) {
  opacity: 100%;
}

.c25:hover {
  background: !important;
}

.c25:hover td:hover {
  opacity: 100%;
}

.c28 {
  cursor: pointer;
  color: #0E0E0E;
}

.TBody-gqq9cv-0 .c23:nth-child(even) {
  background: #FFFFFF;
}

.TBody-gqq9cv-0 .c23:nth-child(even) td:first-child,
.TBody-gqq9cv-0 .c28:nth-child(even) th:first-child {
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.TBody-gqq9cv-0 .c23:nth-child(even) td:last-child,
.TBody-gqq9cv-0 .c28:nth-child(even) th:last-child {
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}

.c28 td:nth-last-child(-n + 1) {
  opacity: 0;
}

.c28:hover {
  background: #E9F1FB !important;
}

.c28:hover td:hover {
  opacity: 100%;
}

.c29 {
  padding-left: 20px;
}

.c26 {
  width: auto;
  background-color: rgba(255,255,255,1);
  color: rgba(47,56,80,1);
  opacity: 0.6;
}

.c21 {
  position: relative;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    overflow="scroll"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
        display="flex"
      >
        <h1
          class="c3"
        >
          Manage accounts
        </h1>
      </div>
      <div>
        <div
          style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; margin-bottom: 40px; padding: 0px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c4"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c6"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c7"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Team Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c8"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Third Party
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c9"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      E-Intervention Admin
                    </p>
                  </div>
                </div>
                <div
                  class="c10"
                  width="25"
                />
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 33.333333333333336%; flex-basis: 33.333333333333336%; flex-grow: 0; flex-shrink: 0; max-width: 33.333333333333336%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c11"
                  >
                    <input
                      class="c12 c13"
                      id="show-inactive"
                      type="checkbox"
                    />
                    <label
                      class="c14 c15"
                      for="show-inactive"
                    >
                      <img
                        class="c16 c17"
                        src="IMAGE_MOCK"
                      />
                      Show inactive accounts
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
            >
              <div
                class="c18"
              >
                <input
                  aria-label="Filter users by name"
                  class="c19"
                  placeholder="Filter users by name"
                  type="text"
                  value=""
                />
                <img
                  alt="search"
                  class="c20"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
          </div>
          <span
            style="display: table; clear: both;"
          />
        </div>
        <div
          class="c21"
        >
          <table
            class="c22"
            width="100%"
          >
            <thead
              class="THead-sc-8drp5d-0"
            >
              <tr
                class="c23 c24 c25"
              >
                <th
                  class="c26"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="c27"
                  >
                    Name
                  </div>
                </th>
                <th
                  class="c26"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="c27"
                  >
                    Email
                  </div>
                </th>
                <th
                  class="c26"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="c27"
                  >
                    Role
                  </div>
                </th>
                <th
                  class="c26"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="c27"
                  >
                    Activate/Deactivate
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="TBody-gqq9cv-0"
            >
              <tr
                class="c23 c24 c28"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="c29"
                >
                  <p
                    class="c30"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="c29"
                >
                  test@test.pl
                </td>
                <td
                  class="c29"
                >
                  <div
                    class="c31"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </td>
                <td
                  class="c29"
                >
                  <div
                    class="c32"
                    width="100%"
                  >
                    <button
                      class="c33"
                    >
                      <p
                        class="c34"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="c23 c24 c28"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="c29"
                >
                  <p
                    class="c30"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="c29"
                >
                  test2@test.pl
                </td>
                <td
                  class="c29"
                >
                  <div
                    class="c35"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </td>
                <td
                  class="c29"
                >
                  <div
                    class="c32"
                    width="100%"
                  >
                    <button
                      class="c33"
                    >
                      <p
                        class="c34"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="c23 c24 c28"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="c29"
                >
                  <p
                    class="c30"
                    color="#D2371D"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="c29"
                >
                  test3@test.pl
                </td>
                <td
                  class="c29"
                >
                  <div
                    class="c36"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Admin
                    </p>
                  </div>
                </td>
                <td
                  class="c29"
                >
                  <div
                    class="c32"
                    width="100%"
                  >
                    <button
                      class="c33"
                    >
                      <p
                        class="c34"
                        color="#D2371D"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          aria-label="Data list pagination"
          class="c37"
          display="flex"
          role="navigation"
          width="100%"
        >
          <div
            aria-label="Go to page: 1"
            aria-selected="true"
            class="c38"
            cursor="pointer"
            display="flex"
          >
            <p
              class="c39"
              color="#FFFFFF"
            >
              1
            </p>
          </div>
          <h1
            aria-label="Go to next page"
            class="c40"
            cursor="pointer"
          >
            &gt;
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;
